--- a/.gitignore
+++ b/.gitignore
@@ -39,11 +39,15 @@ vignettes/*.pdf
 # R Environment Variables
 .Renviron
 
-# pkgdown site
-docs/
-
 # translation temp files
 po/*~
 
 # RStudio Connect folder
 rsconnect/
+
+# temp files
+_bookdown_files/
+
+# log
+*.log
+
